--- a/AdminDashboardProject/Views/_ViewImports.cshtml
+++ b/AdminDashboardProject/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using SharedProject.Models
 @using SharedProject.ViewModels.Prodcuts
+@using SharedProject.ViewModels
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
