--- a/AdminDashboardProject/Views/Products/New.cshtml
+++ b/AdminDashboardProject/Views/Products/New.cshtml
@@ -65,6 +65,17 @@
             <input type="file" hidden id="upload-method" multiple asp-for="ProductImages" />
             <button class="btn btn-dark d-block mt-5" id="upload-images"> Upload  Image or multiple</button>
         </div>
+        <div class="form-group longDescContainer d-flex row col-12">
+            <div class="longDescImagesContainer col-8">
+                <div id="long-desc-array" class="img-arr"></div>
+                <input type="file" hidden id="uploadLongDescImage" multiple asp-for="ProductLongDescImages" />
+                <button class="btn btn-dark d-block mt-5" id="uploadLongDescImageBtn"> Upload  Image or multiple</button>
+          </div>
+          <div class="col-4 mb-3">
+                <label class="exampleFormControlTextarea1" asp-for="LongDescription.FullDescription"></label>
+                <textarea class="form-control" asp-for="LongDescription.FullDescription"></textarea>
+          </div>
+        </div>
         <input type="submit" value="Save" class="btn btn-success"/>
    </div>
 </form>
